--- a/public/index2.html
+++ b/public/index2.html
@@ -2,9 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Nightlife Coordination App</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" type="text/css" />
-        <link rel="stylesheet" href="main.css" type="text/css" />
+        <title>Stock Market</title>
+        <!--<link rel="stylesheet" href="main.css" type="text/css" />-->
     </head>
     <body>
         <div id="app"></div>
