--- a/public/index2.html
+++ b/public/index2.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Stock Market</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/4.2.5/highstock.js"></script>
+        <script src="socket.io/socket.io.js"></script>
         <script type="text/javascript" src="dark-unica.js"></script>
-        <!--<link rel="stylesheet" href="main.css" type="text/css" />-->
+        <link rel="stylesheet" href="main.css" type="text/css" />
     </head>
     <body>
         <div id="app"></div>
